--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
-altgraph==0.17.3
-blinker==1.6.2
-certifi==2023.5.7
-charset-normalizer==3.1.0
-click==8.1.3
-Flask==2.2.5
-idna==3.4
+blinker==1.7.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+Flask==3.0.2
+idna==3.6
 itsdangerous==2.1.2
-Jinja2==3.0.1
-macholib==1.16.2
-MarkupSafe==2.1.2
-pyinstaller==5.11.0
-pyinstaller-hooks-contrib==2023.3
-requests==2.30.0
-urllib3==2.0.2
-Werkzeug==2.2.3
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+menousdb==0.1.3
+prettytable==3.10.0
+requests==2.31.0
+urllib3==2.2.1
+wcwidth==0.2.13
+Werkzeug==3.0.1
